welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:4: error: ambiguous reference to overloaded definition,
both method < in class Int of type (x: Char)Boolean
and  method < in class Int of type (x: Short)Boolean
match expected type ?
	} else if (n-190<1=0 && 0<=n-190) {
                        ^