welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
	if (n-90<=10 && 0<=n-90) {
		return true
	} else if (n-190<1=0 && 0<=n-190) {
		return true
	} else {
		return false
	}
}
